// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dynamic - Renames Item to Tag 1`] = `
"import { Tag, TagGroup } from "@react-spectrum/s2";
import { Item } from '@adobe/react-spectrum';
const items = [
  {id: 1, name: 'News'},
  {id: 2, name: 'Travel'},
  {id: 3, name: 'Gaming'},
  {id: 4, name: 'Shopping'}
];

<div>
  <TagGroup items={items} aria-label="Dynamic TagGroup items example">
    {item => <Tag>{item.name}</Tag>}
  </TagGroup>
</div>"
`;

exports[`Dynamic - Renames key to id 1`] = `
"import { Tag, TagGroup } from "@react-spectrum/s2";
import { Item } from '@adobe/react-spectrum';
const items = [
  {id: 1, name: 'News'},
  {id: 2, name: 'Travel'},
  {id: 3, name: 'Gaming'},
  {id: 4, name: 'Shopping'}
];

<div>
  <TagGroup items={items} aria-label="Dynamic TagGroup items example">
    {item => <Tag id={item.id}>{item.name}</Tag>}
  </TagGroup>
  <TagGroup items={items} aria-label="Dynamic TagGroup items example">
    {item => <Tag id={item.id}>{item.name}</Tag>}
  </TagGroup>
  <TagGroup items={items} aria-label="Dynamic TagGroup items example">
    {item => <Tag>{item.name}</Tag>}
  </TagGroup>
</div>"
`;

exports[`Static - Renames Item to Tag 1`] = `
"import { Tag, TagGroup } from "@react-spectrum/s2";
import { Item } from '@adobe/react-spectrum';

<div>
  <TagGroup aria-label="Static TagGroup items example">
    <Tag>News</Tag>
    <Tag>Travel</Tag>
    <Tag>Gaming</Tag>
    <Tag>Shopping</Tag>
  </TagGroup>
</div>"
`;

exports[`Static - Renames key to id 1`] = `
"import { Tag, TagGroup } from "@react-spectrum/s2";
import { Item } from '@adobe/react-spectrum';

let externalKey = 'travel';
<div>
  <TagGroup aria-label="Static TagGroup items example">
    <Tag id="news">News</Tag>
    <Tag id={externalKey}>Travel</Tag>
    <Tag>Gaming</Tag>
    <Tag>Shopping</Tag>
  </TagGroup>
</div>"
`;

exports[`changes validationState to isInvalid or nothing 1`] = `
"import { Tag, TagGroup } from "@react-spectrum/s2";
import { Item } from '@adobe/react-spectrum';

let validationState = 'invalid';
let props = {validationState: 'invalid'};
<div>
  // TODO(S2-upgrade): validationState has not been implemented yet.
  <TagGroup aria-label="Static TagGroup items example">
    <Tag>News</Tag>
  </TagGroup>
  // TODO(S2-upgrade): validationState has not been implemented yet.
  <TagGroup aria-label="Static TagGroup items example">
    <Tag>News</Tag>
  </TagGroup>
  // TODO(S2-upgrade): validationState has not been implemented yet.
  <TagGroup aria-label="Static TagGroup items example">
    <Tag>News</Tag>
  </TagGroup>
  // TODO(S2-upgrade): validationState has not been implemented yet.
  <TagGroup aria-label="Static TagGroup items example">
    <Tag>News</Tag>
  </TagGroup>
  <TagGroup
    aria-label="Static TagGroup items example"
    // TODO(S2-upgrade): check this spread for style props
    {...props}>
    <Tag>News</Tag>
  </TagGroup>
</div>"
`;
